--- a/matlab/matlab-Info.plist
+++ b/matlab/matlab-Info.plist
@@ -11,53 +11,81 @@
 			<string>QLGenerator</string>
 			<key>LSItemContentTypes</key>
 			<array>
-				<string>SUPPORTED_UTI_TYPE</string>
+				<string>com.mathworks.workspace</string>
 			</array>
 		</dict>
 	</array>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string></string>
+	<string>Matlab.icns</string>
 	<key>CFBundleIdentifier</key>
-	<string>org.smrsgroup.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>org.smrsgroup.matlab.qlgenerator</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1</string>
+	<string>3</string>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>3</string>
 	<key>CFPlugInDynamicRegisterFunction</key>
 	<string></string>
 	<key>CFPlugInDynamicRegistration</key>
 	<string>NO</string>
 	<key>CFPlugInFactories</key>
 	<dict>
-		<key>53A8B272-C98C-438C-AB6A-AACAA73CE6DB</key>
+		<key>5583A43A-1625-47B4-B044-0EB55468E827</key>
 		<string>QuickLookGeneratorPluginFactory</string>
 	</dict>
 	<key>CFPlugInTypes</key>
 	<dict>
 		<key>5E2D9680-5022-40FA-B806-43349622E5B9</key>
 		<array>
-			<string>53A8B272-C98C-438C-AB6A-AACAA73CE6DB</string>
+			<string>5583A43A-1625-47B4-B044-0EB55468E827</string>
 		</array>
 	</dict>
 	<key>CFPlugInUnloadFunction</key>
 	<string></string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2011 Imperial College. All rights reserved.</string>
+	<string>Copyright © 2011 Jake TM Pearce. All rights reserved.</string>
 	<key>QLNeedsToBeRunInMainThread</key>
 	<false/>
 	<key>QLPreviewHeight</key>
-	<real>600</real>
+	<integer>800</integer>
 	<key>QLPreviewWidth</key>
-	<real>800</real>
+	<integer>1000</integer>
 	<key>QLSupportsConcurrentRequests</key>
 	<false/>
 	<key>QLThumbnailMinimumSize</key>
 	<real>17</real>
+	<key>UTImportedTypeDeclarations</key>
+	<array>
+		<dict>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string>public.data</string>
+			</array>
+			<key>UTTypeDescription</key>
+			<string>MATLAB Workspace</string>
+			<key>UTTypeIconFile</key>
+			<string>mat.icns</string>
+			<key>UTTypeIdentifier</key>
+			<string>com.mathworks.workspace</string>
+			<key>UTTypeReferenceURL</key>
+			<string>http://www.mathworks.com/</string>
+			<key>UTTypeTagSpecification</key>
+			<dict>
+				<key>com.apple.ostype</key>
+				<string>MATW</string>
+				<key>public.filename-extension</key>
+				<array>
+					<string>mat</string>
+				</array>
+				<key>public.mime-type</key>
+				<string>application/x-matlab-workspace</string>
+			</dict>
+		</dict>
+	</array>
 </dict>
 </plist>
