--- a/matlabMDI/matlabMDI-Info.plist
+++ b/matlabMDI/matlabMDI-Info.plist
@@ -11,7 +11,7 @@
 			<string>MDImporter</string>
 			<key>LSItemContentTypes</key>
 			<array>
-				<string>YOUR_EXTERNAL_RECORD_UTI</string>
+				<string>com.mathworks.workspace</string>
 			</array>
 		</dict>
 	</array>
@@ -26,7 +26,7 @@
 	<key>CFBundleName</key>
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>3.0</string>
 	<key>CFPlugInDynamicRegisterFunction</key>
 	<string></string>
 	<key>CFPlugInDynamicRegistration</key>
