--- a/.gitignore
+++ b/.gitignore
@@ -3,33 +3,7 @@
 *.mode1v3
 xcuserdata/
 
-libboost_date_time.dylib
-libboost_filesystem.dylib
-libboost_regex.dylib
-libboost_signals.dylib
-libboost_system.dylib
-libboost_thread.dylib
-libhdf5.6.0.2.dylib
-libhdf5.6.dylib
-libhdf5_hl.6.0.2.dylib
-libhdf5_hl.6.dylib
-libicudata.dylib.42
-libicudata.dylib.42.1
-libicui18n.dylib.42
-libicui18n.dylib.42.1
-libicuio.dylib.42
-libicuio.dylib.42.1
-libicuuc.dylib.42
-libicuuc.dylib.42.1
-libmat.dylib
-libmwMATLAB_res.dylib
-libmwfl.dylib
-libmwi18n.dylib
-libmwresource_core.dylib
-libmx.dylib
-libut.dylib
-libtbb.dylib
-libtbbmalloc.dylib
+*.dylib
 
 mat.h
 matrix.h
