--- a/matlabMDI/matlabMDI-Info.plist
+++ b/matlabMDI/matlabMDI-Info.plist
@@ -20,7 +20,7 @@
 	<key>CFBundleIconFile</key>
 	<string>Matlab.icns</string>
 	<key>CFBundleIdentifier</key>
-	<string>org.smrsgroup.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.1</string>
 	<key>CFBundleName</key>
