--- a/matlab.xcodeproj/xcshareddata/xcschemes/Collecting Dependencies.xcscheme
+++ b/matlab.xcodeproj/xcshareddata/xcschemes/Collecting Dependencies.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0610"
+   LastUpgradeVersion = "0730"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -17,27 +17,30 @@
                BlueprintIdentifier = "D7F0617A19FFFFF300AFD99B"
                BuildableName = "Collecting Dependencies"
                BlueprintName = "Collecting Dependencies"
-               ReferencedContainer = "container:matlab.xcodeproj">
+               ReferencedContainer = "container:../../../Dropbox/Development/matlab/matlab.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      buildConfiguration = "Debug">
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
+      <AdditionalOptions>
+      </AdditionalOptions>
    </TestAction>
    <LaunchAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Debug"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
+      debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
       <MacroExpansion>
          <BuildableReference
@@ -45,17 +48,17 @@
             BlueprintIdentifier = "D7F0617A19FFFFF300AFD99B"
             BuildableName = "Collecting Dependencies"
             BlueprintName = "Collecting Dependencies"
-            ReferencedContainer = "container:matlab.xcodeproj">
+            ReferencedContainer = "container:../../../Dropbox/Development/matlab/matlab.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
+      buildConfiguration = "Release"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Release"
       debugDocumentVersioning = "YES">
       <MacroExpansion>
          <BuildableReference
@@ -63,7 +66,7 @@
             BlueprintIdentifier = "D7F0617A19FFFFF300AFD99B"
             BuildableName = "Collecting Dependencies"
             BlueprintName = "Collecting Dependencies"
-            ReferencedContainer = "container:matlab.xcodeproj">
+            ReferencedContainer = "container:../../../Dropbox/Development/matlab/matlab.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
