--- a/matlab.xcodeproj/xcshareddata/xcschemes/mdimport.xcscheme
+++ b/matlab.xcodeproj/xcshareddata/xcschemes/mdimport.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0610"
+   LastUpgradeVersion = "0730"
    version = "1.8">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -17,31 +17,35 @@
                BlueprintIdentifier = "D7E4B16213C24D4600B88BB2"
                BuildableName = "matlab.mdimporter"
                BlueprintName = "matlabMDI"
-               ReferencedContainer = "container:matlab.xcodeproj">
+               ReferencedContainer = "container:../../../Dropbox/Development/matlab/matlab.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.GDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      buildConfiguration = "Debug">
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
+      <AdditionalOptions>
+      </AdditionalOptions>
    </TestAction>
    <LaunchAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.GDB"
       displayScaleIsEnabled = "NO"
       displayScale = "1.00"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Debug"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
+      debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
       <PathRunnable
+         runnableDebuggingMode = "0"
          FilePath = "/usr/bin/mdimport">
       </PathRunnable>
       <MacroExpansion>
@@ -50,7 +54,7 @@
             BlueprintIdentifier = "D7E4B16213C24D4600B88BB2"
             BuildableName = "matlab.mdimporter"
             BlueprintName = "matlabMDI"
-            ReferencedContainer = "container:matlab.xcodeproj">
+            ReferencedContainer = "container:../../../Dropbox/Development/matlab/matlab.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <CommandLineArguments>
@@ -73,10 +77,10 @@
    <ProfileAction
       displayScaleIsEnabled = "NO"
       displayScale = "1.00"
+      buildConfiguration = "Release"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Release"
       debugDocumentVersioning = "YES">
    </ProfileAction>
    <AnalyzeAction
