--- a/matlab.xcodeproj/xcshareddata/xcschemes/qlmanager.xcscheme
+++ b/matlab.xcodeproj/xcshareddata/xcschemes/qlmanager.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0610"
+   LastUpgradeVersion = "0730"
    version = "1.8">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -17,31 +17,35 @@
                BlueprintIdentifier = "D7513D9D1345F2D600E0AF6A"
                BuildableName = "matlab.qlgenerator"
                BlueprintName = "matlabQL"
-               ReferencedContainer = "container:matlab.xcodeproj">
+               ReferencedContainer = "container:../../../Dropbox/Development/matlab/matlab.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      buildConfiguration = "Debug">
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
+      <AdditionalOptions>
+      </AdditionalOptions>
    </TestAction>
    <LaunchAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       displayScaleIsEnabled = "NO"
       displayScale = "1.00"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Debug"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
+      debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
       <PathRunnable
+         runnableDebuggingMode = "0"
          FilePath = "/System/Library/Frameworks/QuickLook.framework/Versions/A/Resources/quicklookd.app/Contents/MacOS/qlmanage">
       </PathRunnable>
       <MacroExpansion>
@@ -50,7 +54,7 @@
             BlueprintIdentifier = "D7513D9D1345F2D600E0AF6A"
             BuildableName = "matlab.qlgenerator"
             BlueprintName = "matlabQL"
-            ReferencedContainer = "container:matlab.xcodeproj">
+            ReferencedContainer = "container:../../../Dropbox/Development/matlab/matlab.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <CommandLineArguments>
@@ -84,12 +88,13 @@
    <ProfileAction
       displayScaleIsEnabled = "NO"
       displayScale = "1.00"
+      buildConfiguration = "Release"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Release"
       debugDocumentVersioning = "YES">
       <PathRunnable
+         runnableDebuggingMode = "0"
          FilePath = "/System/Library/Frameworks/QuickLook.framework/Versions/A/Resources/quicklookd.app/Contents/MacOS/qlmanage">
       </PathRunnable>
    </ProfileAction>
