--- a/matlab.xcodeproj/xcshareddata/xcschemes/qlmanager.xcscheme
+++ b/matlab.xcodeproj/xcshareddata/xcschemes/qlmanager.xcscheme
@@ -17,7 +17,7 @@
                BlueprintIdentifier = "D7513D9D1345F2D600E0AF6A"
                BuildableName = "matlab.qlgenerator"
                BlueprintName = "matlabQL"
-               ReferencedContainer = "container:../../../Dropbox/Development/matlab/matlab.xcodeproj">
+               ReferencedContainer = "container:matlab.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -54,7 +54,7 @@
             BlueprintIdentifier = "D7513D9D1345F2D600E0AF6A"
             BuildableName = "matlab.qlgenerator"
             BlueprintName = "matlabQL"
-            ReferencedContainer = "container:../../../Dropbox/Development/matlab/matlab.xcodeproj">
+            ReferencedContainer = "container:matlab.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <CommandLineArguments>
@@ -67,7 +67,7 @@
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
-            argument = " -g $(BUILT_PRODUCTS_DIR)/matlab.qlgenerator"
+            argument = " -g &quot;$(BUILT_PRODUCTS_DIR)/matlab.qlgenerator&quot;"
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
